@@ -36,6 +36,7 @@ public class Database {
 	String username;
 	String realname;
 	String passwd;
+	String nickserv_passwd;
 
 	int[] idxarray;
 
@@ -197,6 +198,7 @@ public class Database {
 			username = "";
 			realname = "jmIrc user";
 			passwd = "";
+			nickserv_passwd = "";
 		}
 		else if (index < idxarray.length) {
 			try {
@@ -214,6 +216,7 @@ public class Database {
 					username = dis.readUTF();
 					realname = dis.readUTF();
 					passwd = dis.readUTF();
+					nickserv_passwd = dis.readUTF();
 				}
 				rs.closeRecordStore();
 			} catch (Exception e) {
@@ -246,6 +249,7 @@ public class Database {
 			dos.writeUTF(username);
 			dos.writeUTF(realname);
 			dos.writeUTF(passwd);
+			dos.writeUTF(nickserv_passwd);
 			byte[] temp = baos.toByteArray();
 			dos.close();
 
