@@ -1,3 +1,7 @@
+2007-01-18  Ondrej Novy
+   * Changed max server password length from 10 to 20
+   * Added NickServ support
+
 2006-10-15  Juho Vähä-Herttua
    * Fix timestamp command to be correct
 
